--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sum_of_intervals",
+  "name": "sum-of-intervals",
   "version": "1.0.0",
   "description": "Write a function called `sumIntervals`/`sum_intervals()` that accepts an array of intervals, and returns the sum of all the interval lengths. Overlapping intervals should only be counted once.",
   "main": "kata.js",
